--- a/templates/client/pages/blog/index.html
+++ b/templates/client/pages/blog/index.html
@@ -12,6 +12,7 @@
         <h3>{{ blog.title }}</h3>
         <h4>{{ blog.name }}</h4>
         <p>{{ blog.description }}</p>
+        <p><strong>Category:</strong> {{ blog.category.name }}</p>  
         {% if blog.image %}
         <p>Image URL: {{ blog.image.url }}</p>
         <img src="{{ blog.image.url }}" alt="{{ blog.title }}" width="200" />
